# macmush

./: LICENSE  PROJECT_ROADMAP.md  README.md  package-lock.json  package.json  test-world.mcl
src/: ansi-parser.js  ansi-test.html  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  world_file.rs
src-tauri/src/automation/: aliases.rs  command_history.rs  highlights.rs  keypad.rs  mod.rs  speedwalk.rs  tab_completion.rs  timers.rs  triggers.rs  variables.rs
src-tauri/src/core/: connection.rs  events.rs  mod 2.rs  mod.rs  session.rs  world 2.rs  world.rs
src-tauri/src/network/: codec.rs  mccp.rs  mod.rs  mxp.rs  tcp.rs  tls.rs
src-tauri/src/persistence/: logging.rs  mod.rs  world_file.rs
src-tauri/src/scripting/: lua_runtime.rs  mod.rs  world_api.rs
src-tauri/src/ui/: commands 2.rs  commands.rs  events.rs  mod.rs  state.rs
src-tauri/tests/: integration_tests.rs
