[package]
name = "macmush"
version = "0.1.0"
description = "MACMush - A modern MUD/MUSH client for macOS"
authors = ["MACMush Team"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "macmush_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.36", features = ["serialize"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Networking
rustls = { version = "0.23", features = ["ring"] }
rustls-native-certs = "0.8"
tokio-rustls = "0.26"
flate2 = "1.0"

# Text processing
regex = "1.11"
once_cell = "1.20"
html-escape = "0.2"

# Scripting
mlua = { version = "0.10", features = ["lua54", "vendored", "send", "serialize"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
proptest = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

